# OpsPilotEnterprise

./: .env.example  .gitignore  OpsPilot Codex 开发说明书.md  OpsPilot Memory 能力设计说明.md  OpsPilot V2 需求规格说明书（Codex开发版）.md  OpsPilotEnterprise 知识管理增强.md  README.md  aiops平台_codex开发说明_补充运维场景_v_1.md  aiops平台_codex开发说明书_v_1.1.md  aiops平台_前端开发需求_v_1.1.md  pnpm-lock.yaml  故障诊断 Agent Prompt + 推理链模板.md
.github/workflows/: intent-understanding-regression.yml
apps/api-bff/: pyproject.toml
apps/web/: Dockerfile  package.json
data/: secrets.db
data/chat_exports/: vcenter-conn-vcenter-prod-vms-20260409T025327Z.csv  vcenter-conn-vcenter-prod-vms-20260428T095233Z.csv
deploy/docker/: docker-compose.yml
deploy/scripts/: bootstrap-remote.sh  configure-opensearch-anonymous.sh
docs/: intent-understanding-eval-matrix.md  intent-understanding-eval-report.md  remote-deployment.md  vmware-opensearch-logs.md
opspilot-enterprise/: .env.example  .gitignore  README.md  package.json  tmp-browser-chat-driven-verify.js  tmp-browser-chat-localhost-debug.js  tmp-browser-chat-verify.js  tmp-browser-inspect-localhost.js  tmp-browser-inspect.js  tmp-browser-login-debug.js  tmp-browser-login-inspect.js  tmp-browser-network.js  tmp-playwright-check.js
opspilot-enterprise/apps/api-bff/: Dockerfile  pyproject.toml
opspilot-enterprise/apps/api-bff/app/: main.py
opspilot-enterprise/apps/api-bff/app/routers/: approvals.py  audit.py  auth.py  cases.py  change_impact.py  chat.py  connections.py  evidence.py  executions.py  incidents.py  intent.py  knowledge.py  memory_rag.py  notifications.py  policies.py  remediation.py  resources.py  secrets.py  tools.py  topology.py  upgrades.py
opspilot-enterprise/apps/api-bff/app/services/: connectivity_tester.py  secret_store.py  vmware_intent.py
opspilot-enterprise/apps/api-bff/data/chat_exports/: vcenter-conn-vcenter-prod-vms-20260409T032725Z.csv  vcenter-conn-vcenter-prod-vms-20260409T033702Z.csv  vcenter-conn-vcenter-prod-vms-20260409T034210Z.csv  vcenter-conn-vcenter-prod-vms-20260409T094158Z.csv  vcenter-conn-vcenter-prod-vms-20260422T154933Z.csv
opspilot-enterprise/docs/: api-reference.md  architecture.md  intent-understanding-capability.md  intent-understanding-eval-matrix.md  intent-understanding-eval-report.md  knowledge-management-module-summary.md  remote-deployment.md  项目情况总结_2026-04-16.md
opspilot-enterprise/scripts/: deploy-remote.ps1  dev-backend.ps1  dev-backend.sh  eval_intent_understanding.py
opspilot-enterprise/services/approval-center-service/: Dockerfile  pyproject.toml
opspilot-enterprise/services/approval-center-service/app/: main.py
opspilot-enterprise/services/change-impact-service/: Dockerfile  pyproject.toml
opspilot-enterprise/services/change-impact-service/app/: main.py
opspilot-enterprise/services/event-ingestion-service/: Dockerfile  pyproject.toml
opspilot-enterprise/services/event-ingestion-service/app/: main.py
opspilot-enterprise/services/governance-service/: Dockerfile  pyproject.toml
opspilot-enterprise/services/governance-service/app/: main.py
opspilot-enterprise/services/knowledge-service/: Dockerfile  pyproject.toml
opspilot-enterprise/services/knowledge-service/app/: main.py
opspilot-enterprise/services/langgraph-orchestrator/: Dockerfile  pyproject.toml
opspilot-enterprise/services/langgraph-orchestrator/app/: agents.py  llm_client.py  main.py
opspilot-enterprise/services/langgraph-orchestrator/app/audit/: checkpoint.py  events.py  router.py
opspilot-enterprise/services/langgraph-orchestrator/app/intent_recovery/: __init__.py  analyze_service.py  ontology.py  router.py  scorer.py  service.py  slot_extractor.py
opspilot-enterprise/services/langgraph-orchestrator/app/interactions/: approve.py  clarify.py  router.py
opspilot-enterprise/services/langgraph-orchestrator/app/memory_rag/: router.py  service.py
opspilot-enterprise/services/langgraph-orchestrator/app/pipeline/: orchestrate_chat_v2.py
opspilot-enterprise/services/langgraph-orchestrator/app/policy/: __init__.py  engine.py
opspilot-enterprise/services/langgraph-orchestrator/app/resume/: router.py  service.py
opspilot-enterprise/services/langgraph-orchestrator/app/storage/: __init__.py  db.py  postgres.py
opspilot-enterprise/services/langgraph-orchestrator/tests/: test_memory_rag.py  test_resume_idempotent.py
opspilot-enterprise/services/vmware-skill-gateway/: Dockerfile  pyproject.toml
opspilot-enterprise/services/vmware-skill-gateway/app/: main.py  mock_data.py
opspilot-enterprise/services/vmware-skill-gateway/app/routers/: execute.py  invoke.py  metrics.py  query.py
opspilot-enterprise/services/vmware-skill-gateway/app/services/: vcenter_service.py
opspilot-enterprise/tests/: conftest.py  test_alert_knowledge.py  test_alert_reasoning_integration.py  test_audit.py  test_auth.py  test_change_impact.py  test_chat_evidence.py  test_chat_flow.py  test_event_ingestion.py  test_knowledge.py  test_orchestrator.py  (+4 more)
scripts/: deploy-remote.ps1  eval_intent_understanding_page.js  install-opa.ps1
services/kubernetes-skill-gateway/: pyproject.toml
services/kubernetes-skill-gateway/app/: main.py
services/kubernetes-skill-gateway/app/routers/: invoke.py
services/memory-service/: pyproject.toml
services/memory-service/app/: __init__.py  merger.py  retriever.py  schemas.py
services/tool-gateway/: pyproject.toml
services/tool-gateway/app/: registry.py
services/tool-gateway/app/routers/: tools.py
services/topology-service/: pyproject.toml
services/topology-service/app/: __init__.py  main.py
tests/: test_alert_knowledge.py  test_approvals.py  test_chat_flow.py  test_event_ingestion.py  test_event_ingestion_monitoring_pipeline.py  test_evidence_aggregator.py  test_incidents_bff.py  test_intent_live_eval.py  test_intent_understanding_dataset.py  test_intent_understanding_regression.py  test_log_gateway.py  test_memory_service.py  test_notifications.py  test_policies.py  test_resources_api.py  test_tool_gateway.py  test_vmware_gateway.py
tmp-browser-artifacts/: host-fqdn-ui.txt  host-fqdn.txt  host-shortname-ui.txt
(+177 files in other folders)
