[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opspilot-tool-gateway"
version = "0.1.0"
description = "OpsPilot Tool Gateway API"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic>=2.0",
    "opspilot-shared-schema @ file:../../packages/shared-schema",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
