[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opspilot-event-ingestion-service"
version = "0.1.0"
description = "OpsPilot Event Ingestion mock service"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "PyYAML",
    "opspilot-shared-schema @ file:../../packages/shared-schema",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
